Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods[1]"
+    "palermo = neighborhoods[0]\n",
+    "palermo"
    ]
   },
   {
@@ -114,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = coordinates[1]"
    ]
   },
   {
