--- a/index.ipynb
+++ b/index.ipynb
@@ -62,9 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Palermo'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "palermo = neighborhoods[0]\n",
     "palermo"
@@ -79,11 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La Boca'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca = neighborhoods[-1]"
+    "la_boca = neighborhoods[-1]\n",
+    "la_boca"
    ]
   },
   {
@@ -115,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates[1]"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
@@ -124,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinates[]"
    ]
   },
   {
